* Added test for route-filter * API violation * Removed namespace override
